--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
     "express": "^4.18.2",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "serve-favicon": "^2.5.0"
   },
-  
   "name": "node",
   "version": "1.0.0",
   "description": "node.js tutorial packege",
@@ -11,7 +11,8 @@
   "scripts": {
     "start": "node refs/index.js",
     "dev": "nodemon refs/index.js"
-  },"devDependencies": {
+  },
+  "devDependencies": {
     "nodemon": "^2.0.22"
   },
   "author": "Mickhail Paramonov <9496260@gmail.com>",
